--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #191113;
+    @define-color background #131318;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #382e30;
+    @define-color inverse_on_surface #303036;
 
-    @define-color inverse_primary #8d4a5b;
+    @define-color inverse_primary #545a92;
 
-    @define-color inverse_surface #efdee0;
+    @define-color inverse_surface #e4e1e9;
 
-    @define-color on_background #efdee0;
+    @define-color on_background #e4e1e9;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #551d2d;
+    @define-color on_primary #252b61;
 
-    @define-color on_primary_container #ffd9e0;
+    @define-color on_primary_container #dfe0ff;
 
-    @define-color on_primary_fixed #3a0719;
+    @define-color on_primary_fixed #0e154b;
 
-    @define-color on_primary_fixed_variant #713344;
+    @define-color on_primary_fixed_variant #3c4279;
 
-    @define-color on_secondary #43292f;
+    @define-color on_secondary #2d2f42;
 
-    @define-color on_secondary_container #ffd9e0;
+    @define-color on_secondary_container #e0e0f9;
 
-    @define-color on_secondary_fixed #2b151a;
+    @define-color on_secondary_fixed #181a2c;
 
-    @define-color on_secondary_fixed_variant #5b3f45;
+    @define-color on_secondary_fixed_variant #444559;
 
-    @define-color on_surface #efdee0;
+    @define-color on_surface #e4e1e9;
 
-    @define-color on_surface_variant #d6c2c4;
+    @define-color on_surface_variant #c7c5d0;
 
-    @define-color on_tertiary #462a09;
+    @define-color on_tertiary #45263c;
 
-    @define-color on_tertiary_container #ffdcbe;
+    @define-color on_tertiary_container #ffd7ef;
 
-    @define-color on_tertiary_fixed #2c1600;
+    @define-color on_tertiary_fixed #2e1127;
 
-    @define-color on_tertiary_fixed_variant #60401e;
+    @define-color on_tertiary_fixed_variant #5e3c53;
 
-    @define-color outline #9e8c8f;
+    @define-color outline #91909a;
 
-    @define-color outline_variant #514346;
+    @define-color outline_variant #46464f;
 
-    @define-color primary #ffb1c2;
+    @define-color primary #bdc2ff;
 
-    @define-color primary_container #713344;
+    @define-color primary_container #3c4279;
 
-    @define-color primary_fixed #ffd9e0;
+    @define-color primary_fixed #dfe0ff;
 
-    @define-color primary_fixed_dim #ffb1c2;
+    @define-color primary_fixed_dim #bdc2ff;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e4bdc4;
+    @define-color secondary #c4c4dd;
 
-    @define-color secondary_container #5b3f45;
+    @define-color secondary_container #444559;
 
-    @define-color secondary_fixed #ffd9e0;
+    @define-color secondary_fixed #e0e0f9;
 
-    @define-color secondary_fixed_dim #e4bdc4;
+    @define-color secondary_fixed_dim #c4c4dd;
 
     @define-color shadow #000000;
 
-    @define-color source_color #b91157;
+    @define-color source_color #3540a0;
 
-    @define-color surface #191113;
+    @define-color surface #131318;
 
-    @define-color surface_bright #413738;
+    @define-color surface_bright #39393f;
 
-    @define-color surface_container #261d1f;
+    @define-color surface_container #1f1f25;
 
-    @define-color surface_container_high #312829;
+    @define-color surface_container_high #29292f;
 
-    @define-color surface_container_highest #3c3234;
+    @define-color surface_container_highest #34343a;
 
-    @define-color surface_container_low #22191b;
+    @define-color surface_container_low #1b1b21;
 
-    @define-color surface_container_lowest #140c0e;
+    @define-color surface_container_lowest #0d0e13;
 
-    @define-color surface_dim #191113;
+    @define-color surface_dim #131318;
 
-    @define-color surface_tint #ffb1c2;
+    @define-color surface_tint #bdc2ff;
 
-    @define-color surface_variant #514346;
+    @define-color surface_variant #46464f;
 
-    @define-color tertiary #edbe91;
+    @define-color tertiary #e7b9d6;
 
-    @define-color tertiary_container #60401e;
+    @define-color tertiary_container #5e3c53;
 
-    @define-color tertiary_fixed #ffdcbe;
+    @define-color tertiary_fixed #ffd7ef;
 
-    @define-color tertiary_fixed_dim #edbe91;
+    @define-color tertiary_fixed_dim #e7b9d6;
 
