--- a/.config/waybar/style/islands.css
+++ b/.config/waybar/style/islands.css
@@ -1,233 +1,327 @@
-@import "colors.css";
-
-
 * {
-	font-family: "sf-pro"; /* JetBrainsMono Nerd Font Propo */
-	font-weight: bold; /* bold */
-	min-height: 0;
-        padding: 0;
-        margin: 0;
-	/* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
-	font-size: 98%;
-	font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+    /* `otf-font-awesome` is required to be installed for icons */
+    font-family: Inter;
+    font-size: 13px;
 }
 
-window#waybar,
-window#waybar.empty,
-window#waybar.empty #window {
+window#waybar {
+    background-color: rgba(43, 48, 59, 0);
+    border-bottom: 5px solid rgba(100, 114, 125, 0);
+    color: #ffffff;
+    transition-property: background-color;
+    transition-duration: .5s;
+}
+
+window#waybar.hidden {
+    opacity: 0.2;
+}
+
+/*
+window#waybar.empty {
     background-color: transparent;
-    padding: 0px;
-    border: 0px;
+}
+window#waybar.solo {
+    background-color: #FFFFFF;
+}
+*/
+
+window#waybar.termite {
+    background-color: #3F3F3F;
 }
 
-tooltip {
-	color: @inverse_surface;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 20px;
+window#waybar.chromium {
+    background-color: #000000;
+    border: none;
 }
 
-tooltip label{
-	color: @inverse_surface;
+button {
+    /* Use box-shadow instead of border so the text isn't offset */
+    box-shadow: inset 0 -3px transparent;
+    /* Avoid rounded borders under each button name */
+    border: none;
+    border-radius: 0;
 }
-/*-----module groups----*/
-.modules-right {
-	/*background-color: rgba(0,0,0,1);*/
-	color: @secondary;
-/*	border-bottom: 0px;
-	border-style: solid;
-	border-color: white;
-	border-radius: 20px;*/
-	padding-top: 0px;
-	padding-bottom: 4px;
-	padding-right: 4px;
-	padding-left: 4px;
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+    background: inherit;
+    box-shadow: inset 0 -3px #ffffff;
 }
-.modules-center {
-	/*background-color: rgba(0,0,0,0.5);*/
-	color: @secondary;
-/*	border-bottom: 0px;
-	border-style: solid;
-	border-color: white;
-	border-radius: 20px;*/
-	padding-top: 0px;
-	padding-bottom: 4px;
-	padding-right: 4px;
-	padding-left: 4px;
+
+/* you can set a style on hover for any module like this */
+#pulseaudio:hover {
+    background-color: #a37800;
 }
-.modules-left {
-	/*background-color: rgba(0,0,0,0.5);*/
-	color: @secondary;
-	/*border-bottom: 0px;
-	border-style: solid;
-	border-color: white;
-	border-radius: 20px;*/
-	padding-top: 0px;
-	padding-bottom: 4px;
-	padding-right: 4px;
-	padding-left: 4px;
-}
-/*-----modules indv----*/
-#taskbar button,
+
 #workspaces button {
-	color: @outline;
-    box-shadow: none;
-	  text-shadow: none;
-	  padding: 0px;
-	  padding-bottom: 0px;
-	  padding-top: 1px;
-    border-radius: 9px;
-    padding-left: 4px;
-    padding-right: 4px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
-}
-#taskbar button:hover,
-#workspaces button:hover {
-    color: @primary;
-    border-radius: 20px;
- 	  padding-left: 2px;
-    padding-right: 2px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+    padding: 0 5px;
+    background-color: transparent;
+    color: #ffffff;
 }
 
-#taskbar button.active,
-#workspaces button.active {
-	color: @background;
-	  background-color: alpha(@primary_fixed, 0.75);
-    padding-left: 10px;
-    padding-right: 10px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+#workspaces button:hover {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.focused {
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.urgent {
-    color: @primary;
-    border-radius: 10px;
+    background-color: #eb4d4b;
 }
 
-#workspaces button.persistent {
-	border-radius: 10px;
+#mode {
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
-#custom-swaync {
-  background-color: alpha(@surface_container, 0.75);
- /* border: 1px solid @surface_container; */
-  border-radius: 20px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-right: 8px;
-	padding-left: 15px;
-	margin: 0 0 0 5px;
-}
-
-#backlight,
-#backlight-slider,
-#battery,
-#bluetooth,
 #clock,
+#battery,
 #cpu,
-#disk,
-#idle_inhibitor,
-#keyboard-state,
 #memory,
-#mode,
-#mpris,
-#network,
-#power-profiles-daemon,
-#pulseaudio,
-#pulseaudio-slider,
-#taskbar,
+#disk,
 #temperature,
-#tray,
-#window,
+#backlight,
+#network,
+#pulseaudio,
 #wireplumber,
-#workspaces,
-#custom-backlight,
-#custom-browser,
-#custom-cava_mviz,
-#custom-cycle_wall,
-#custom-dot_update,
-#custom-file_manager,
-#custom-keybinds,
-#custom-keyboard,
-#custom-light_dark,
-#custom-lock,
-#custom-hint,
-#custom-hypridle,
-#custom-menu,
-#custom-playerctl,
-#custom-power_vertical,
-#custom-power,
-#custom-quit,
-#custom-reboot,
-#custom-settings,
-#custom-spotify,
-#custom-tty,
-#custom-updater,
-#custom-weather,
-#custom-weather.clearNight,
-#custom-weather.cloudyFoggyDay,
-#custom-weather.cloudyFoggyNight,
-#custom-weather.default,
-#custom-weather.rainyDay,
-#custom-weather.rainyNight,
-#custom-weather.severe,
-#custom-weather.showyIcyDay,
-#custom-weather.snowyIcyNight,
-#custom-weather.sunnyDay {
-  background-color: alpha(@surface_container, 1);
- /* border: 1.7px solid @primary; */
-  border-radius: 20px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-right: 15px;
-	padding-left: 15px;
-	margin: 0 0 0 5px;
-        outline-offset: 2px;
-}
-/*-----Indicators----*/
-#custom-hypridle.notactive,
-#idle_inhibitor.activated {
-	color: #39FF14;
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#scratchpad,
+#power-profiles-daemon,
+#mpd {
+    padding: 0 10px;
+    color: #ffffff;
 }
 
-#pulseaudio.muted {
-	color: #cc3436;
+#window,
+#workspaces {
+    margin: 0 4px;
 }
-#temperature.critical {
-	color: red;
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
+}
+
+#clock {
+    background-color: transparent;
+}
+
+#battery {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+#battery.charging, #battery.plugged {
+    color: #ffffff;
+    background-color: #26A65B;
 }
 
 @keyframes blink {
-	to {
-		color: #000000;
-	}
+    to {
+        background-color: #ffffff;
+        color: #000000;
+    }
 }
 
+/* Using steps() instead of linear as a timing function to limit cpu usage */
 #battery.critical:not(.charging) {
-	color: #f53c3c;
+    background-color: #f53c3c;
+    color: #ffffff;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: steps(12);
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
-#backlight-slider slider,
-#pulseaudio-slider slider {
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 0;
-	background-image: none;
-	border: none;
-	box-shadow: none;
+#power-profiles-daemon {
+    padding-right: 15px;
 }
 
-#backlight-slider trough,
-#pulseaudio-slider trough {
-	min-width: 80px;
-	min-height: 5px;
-	border-radius: 5px;
+#power-profiles-daemon.performance {
+    background-color: #f53c3c;
+    color: #ffffff;
 }
 
-#backlight-slider highlight,
-#pulseaudio-slider highlight {
-	min-height: 10px;
-	border-radius: 5px;
+#power-profiles-daemon.balanced {
+    background-color: #2980b9;
+    color: #ffffff;
+}
+
+#power-profiles-daemon.power-saver {
+    background-color: #2ecc71;
+    color: #000000;
+}
+
+label:focus {
+    background-color: #000000;
+}
+
+#cpu {
+    background-color: #2ecc71;
+    color: #000000;
+}
+
+#memory {
+    background-color: #9b59b6;
+}
+
+#disk {
+    background-color: #964B00;
+}
+
+#backlight {
+    background-color: #90b1b1;
+}
+
+#network {
+    background-color: #2980b9;
+}
+
+#network.disconnected {
+    background-color: #f53c3c;
+}
+
+#pulseaudio {
+    background-color: transparent;
+    color: #ffffff;
+}
+
+#pulseaudio.muted {
+    background-color: transparent;
+    color: #2a5c45;
+}
+
+#wireplumber {
+    background-color: #fff0f5;
+    color: #000000;
+}
+
+#wireplumber.muted {
+    background-color: #f53c3c;
+}
+
+#custom-media {
+    background-color: #66cc99;
+    color: #2a5c45;
+    min-width: 100px;
+}
+
+#custom-media.custom-spotify {
+    background-color: #66cc99;
+}
+
+#custom-media.custom-vlc {
+    background-color: #ffa000;
+}
+
+#temperature {
+    background-color: #f0932b;
+}
+
+#temperature.critical {
+    background-color: #eb4d4b;
+}
+
+#tray {
+    background-color: transparent;
+}
+
+#tray > .passive {
+    -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
+    background-color: #eb4d4b;
+}
+
+#idle_inhibitor {
+    background-color: #2d3436;
+}
+
+#idle_inhibitor.activated {
+    background-color: #ecf0f1;
+    color: #2d3436;
+}
+
+#mpd {
+    background-color: #66cc99;
+    color: #2a5c45;
+}
+
+#mpd.disconnected {
+    background-color: #f53c3c;
+}
+
+#mpd.stopped {
+    background-color: #90b1b1;
+}
+
+#mpd.paused {
+    background-color: #51a37a;
+}
+
+#language {
+    background: #00b093;
+    color: #740864;
+    padding: 0 5px;
+    margin: 0 5px;
+    min-width: 16px;
+}
+
+#keyboard-state {
+    background: #97e1ad;
+    color: #000000;
+    padding: 0 0px;
+    margin: 0 5px;
+    min-width: 16px;
+}
+
+#keyboard-state > label {
+    padding: 0 5px;
+}
+
+#keyboard-state > label.locked {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad.empty {
+	background-color: transparent;
+}
+
+#privacy {
+    padding: 0;
+}
+
+#privacy-item {
+    padding: 0 5px;
+    color: white;
+}
+
+#privacy-item.screenshare {
+    background-color: #cf5700;
+}
+
+#privacy-item.audio-in {
+    background-color: #1ca000;
+}
+
+#privacy-item.audio-out {
+    background-color: #0069d4;
 }
