--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #131318;
+    @define-color background #121318;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #303036;
+    @define-color inverse_on_surface #2f3036;
 
-    @define-color inverse_primary #545a92;
+    @define-color inverse_primary #475d92;
 
-    @define-color inverse_surface #e4e1e9;
+    @define-color inverse_surface #e2e2e9;
 
-    @define-color on_background #e4e1e9;
+    @define-color on_background #e2e2e9;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #252b61;
+    @define-color on_primary #152e60;
 
-    @define-color on_primary_container #dfe0ff;
+    @define-color on_primary_container #d9e2ff;
 
-    @define-color on_primary_fixed #0e154b;
+    @define-color on_primary_fixed #001945;
 
-    @define-color on_primary_fixed_variant #3c4279;
+    @define-color on_primary_fixed_variant #2f4578;
 
-    @define-color on_secondary #2d2f42;
+    @define-color on_secondary #2a3042;
 
-    @define-color on_secondary_container #e0e0f9;
+    @define-color on_secondary_container #dce2f9;
 
-    @define-color on_secondary_fixed #181a2c;
+    @define-color on_secondary_fixed #151b2c;
 
-    @define-color on_secondary_fixed_variant #444559;
+    @define-color on_secondary_fixed_variant #404659;
 
-    @define-color on_surface #e4e1e9;
+    @define-color on_surface #e2e2e9;
 
-    @define-color on_surface_variant #c7c5d0;
+    @define-color on_surface_variant #c5c6d0;
 
-    @define-color on_tertiary #45263c;
+    @define-color on_tertiary #412742;
 
-    @define-color on_tertiary_container #ffd7ef;
+    @define-color on_tertiary_container #fdd7fa;
 
-    @define-color on_tertiary_fixed #2e1127;
+    @define-color on_tertiary_fixed #2a122c;
 
-    @define-color on_tertiary_fixed_variant #5e3c53;
+    @define-color on_tertiary_fixed_variant #593d59;
 
-    @define-color outline #91909a;
+    @define-color outline #8f9099;
 
-    @define-color outline_variant #46464f;
+    @define-color outline_variant #44464f;
 
-    @define-color primary #bdc2ff;
+    @define-color primary #b0c6ff;
 
-    @define-color primary_container #3c4279;
+    @define-color primary_container #2f4578;
 
-    @define-color primary_fixed #dfe0ff;
+    @define-color primary_fixed #d9e2ff;
 
-    @define-color primary_fixed_dim #bdc2ff;
+    @define-color primary_fixed_dim #b0c6ff;
 
     @define-color scrim #000000;
 
-    @define-color secondary #c4c4dd;
+    @define-color secondary #c0c6dc;
 
-    @define-color secondary_container #444559;
+    @define-color secondary_container #404659;
 
-    @define-color secondary_fixed #e0e0f9;
+    @define-color secondary_fixed #dce2f9;
 
-    @define-color secondary_fixed_dim #c4c4dd;
+    @define-color secondary_fixed_dim #c0c6dc;
 
     @define-color shadow #000000;
 
-    @define-color source_color #3540a0;
+    @define-color source_color #001c4c;
 
-    @define-color surface #131318;
+    @define-color surface #121318;
 
-    @define-color surface_bright #39393f;
+    @define-color surface_bright #38393f;
 
-    @define-color surface_container #1f1f25;
+    @define-color surface_container #1e1f25;
 
-    @define-color surface_container_high #29292f;
+    @define-color surface_container_high #282a2f;
 
-    @define-color surface_container_highest #34343a;
+    @define-color surface_container_highest #33343a;
 
-    @define-color surface_container_low #1b1b21;
+    @define-color surface_container_low #1a1b20;
 
-    @define-color surface_container_lowest #0d0e13;
+    @define-color surface_container_lowest #0c0e13;
 
-    @define-color surface_dim #131318;
+    @define-color surface_dim #121318;
 
-    @define-color surface_tint #bdc2ff;
+    @define-color surface_tint #b0c6ff;
 
-    @define-color surface_variant #46464f;
+    @define-color surface_variant #44464f;
 
-    @define-color tertiary #e7b9d6;
+    @define-color tertiary #e0bbdd;
 
-    @define-color tertiary_container #5e3c53;
+    @define-color tertiary_container #593d59;
 
-    @define-color tertiary_fixed #ffd7ef;
+    @define-color tertiary_fixed #fdd7fa;
 
-    @define-color tertiary_fixed_dim #e7b9d6;
+    @define-color tertiary_fixed_dim #e0bbdd;
 
